[tool.poetry]
name = "bean"
version = "0.1.0"
description = "Bean bot for UFO 50 discord server"
authors = ["Risu and Phil"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord = "^2.3.2"
thefuzz = "^0.22.1"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
